main.css
/* Hubot Sans is licensed under the SIL Open Font License v1.1 from GitHub (https://github.com/github/hubot-sans) */

@font-face {
  font-family: 'Hubot Sans';
  src:
	url('Hubot-Sans.woff2') format('woff2 supports variations'),
	url('Hubot-Sans.woff2') format('woff2-variations');
  font-weight: 200 900;
  font-stretch: 75% 125%;
}

/* Properties for the entire site */
:root {
	font-family: 'Hubot Sans', sans-serif;
	max-width: 900px;
	margin: auto;
	line-height: 1.7;
	color: var(--ctp-latte-text);
	background-color: var(--ctp-latte-base);
}

/* Center and add margins to all headings and paragraphs */
h1, h2, p {
	text-align: center;
}

h1 {
	font-size: 3rem;
	font-style: italic;
}

h2 {
	font-size: 1.75rem;
}

li, p {
	font-size: 1.25rem;
}

/* Properties for the entire links section */
.links {
	max-width: 60vw;
	display: flex;
	flex-wrap: wrap;
	margin: 1em auto;
	justify-content: center;
	gap: 0.4rem;
}

/* Properties for each individual link */
.links a {
	font-size: 1.75rem;
	width: 25vw;
	text-align: center;
	color: var(--ctp-latte-mantle);
	border-radius: 20px;
	padding: 5px;
	text-decoration: none;
	transition: transform 0.2s ease;
}

.links a:active {
	transform: scale(0.90);
}

.mastodon {
	background-color: var(--ctp-latte-mauve);
}

.github {
	background-color: var(--ctp-frappe-crust);
}

.imessage {
	background-color: var(--ctp-latte-blue);
}

.email {
	background-color: var(--ctp-latte-red);
}

/* Properties for the icon inside of each link */
a svg {
	padding-right: .3rem;
}

/* Display a solid black outline when selecting links using the tab key */
a:focus-visible {
	outline: 4px solid var(--ctp-frappe-surface0)	;
}

.avatar {
	display: block;
	margin: 1em auto;
	max-width: 15em;
	height: auto;
	object-fit: scale-down;
}

.PublicKeySection {
	font-size: 1.25rem;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-wrap: wrap;
}

.CopyKeyButton {
	margin-left: 10px;
	align-items: center;
	background-color: var(--ctp-latte-blue);
	border: 0;
	border-radius: 100px;
	box-sizing: border-box;
	color: var(--ctp-latte-mantle);
	cursor: pointer;
	display: inline-flex;
	font: inherit;
	padding-left: 20px;
	padding-right: 20px;
	text-align: center;
	touch-action: manipulation;
	transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
	transition: transform 0.2s ease;
	vertical-align: middle;
}

.CopyKeyButton svg {
	padding-right: .3rem;
}

.CopyKeyButton:hover,
.CopyKeyButton:focus { 
	background-color: var(--ctp-latte-sky);
}

.CopyKeyButton:active {
	background: var(--ctp-latte-lavender);
	transform: scale(0.90);
}

#iMessagePublicKey {
	max-width: fit-content;
	margin-top: -20px;
	border: 2px dashed var(--ctp-latte-overlay0);
	border-radius: 10px;
	user-select: none;
	font-size: 1.25rem;
	word-wrap: break-word;
}

::selection {
	background: rgba(var(--ctp-latte-blue-rgb) / 0.3);
}

/* Specify colors for dark mode */
@media (prefers-color-scheme: dark) {
	:root {
		background: var(--ctp-mocha-base);
		color: var(--ctp-mocha-text);
	}
	
	.links a {
		color: var(--ctp-mocha-crust);
	}
	
	.mastodon {
		background-color: var(--ctp-mocha-mauve);
	}
	
	.github {
		background-color: var(--ctp-mocha-text);
	}
	
	.imessage {
		background-color: var(--ctp-mocha-blue);
	}
	
	.email {
		background-color: var(--ctp-mocha-red);
	}	
	
	::selection {
		background: rgba(var(--ctp-mocha-overlay2-rgb) / 0.3);
	}
	
	
	a:focus-visible {
		outline: 4px solid var(--ctp-latte-crust	);
	}
	
	.CopyKeyButton {
		background-color: var(--ctp-mocha-blue);
		color: var(--ctp-mocha-crust);
	}
	
	.CopyKeyButton:hover,
	.CopyKeyButton:focus { 
		background-color: var(--ctp-mocha-sky);
	}
	
	.CopyKeyButton:active {
		background: var(--ctp-mocha-lavender);
	}
	
	#iMessagePublicKey {
		border-color: var(--ctp-mocha-overlay0);
	}
}

/* Properties for devices with small screens (width of 650px or lower) */
@media (max-width: 650px) {
	img {
		width: 100%;
	}
	
	.contact {
		margin: 1rem 0;
	}
	
	.links {
		max-width: 100%;
	}
	
	.links a {
		font-size: 1.5rem;
		width: 43vw;
	}
	
	.PublicKeySection {
		display: flex;
		flex-direction: column;
		align-items: center;
		text-align: center;
	}
		
	/* Styles every direct child element of PublicKeySection */
	.PublicKeySection > * {
		margin-top: 15px;
		margin-bottom: 0px;
		}
	
	#iMessagePublicKey {
		width: 95%;
		padding: 5px;
	}
}

